@@ -33,6 +33,8 @@ Enhancements
 * new workflows module (#217)
 * new automated dihedral analysis workflow (detect dihedrals with SMARTS,
   analyze with EnsembleAnalysis, and generate seaborn violinplots) (#217)
+* add new exit_on_error=False|True argument to run.runMD_or_exit() so
+  that failures just raise exceptions and not call sys.exit() (PR #249)
 
 Fixes
 
